<resources>
    <string name="app_name">Attender</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="attendance">Attendance</string>
    <string name="students">Students</string>
    <string name="records">Records</string>
    <string name="share_this_app">Share this App</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="attender">Attender</string>
    <string name="tagline">Love teaching! Make it better with Attender.</string>
    <string name="newuser">New User? Fill your details to Create an Account.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="errorinfo">Username or Password is Incorrect!</string>
    <string name="signin">Verify</string>
    <string name="sign_up">Make Account</string>
    <string name="standard">Class</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="show_classes">See classes</string>
    <string name="show_students">See Students</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="student_name">Student Name</string>
    <string name="version">Version 1.0</string>
    <string name="aboutdev">This App is designed and developed by Tanuj Mehta.\nThis Application is an Open-Source project created to help teachers in maintaining record of students\' attendance and minimize their efforts in doing so.\nAll of the source code for this App can be download from Github/tanujkucp/Attender</string>
    <string name="changepassord">Change your Password here</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change</string>
    <string name="update">Update</string>
    <string name="list_completed">Class List Completed!</string>
    <string name="name_empty">Student Name Field is Empty!</string>
    <string name="class_empty">Either Class Name or Number is Empty!</string>
    <string name="class_created">Class Created!</string>
    <string name="create">Create</string>
    <string name="all_add">All Students Added Successfully!</string>
    <string name="class_deleted">Class Deleted</string>
    <string name="stud_deleted">Records of Student deleted!</string>
    <string name="class_exists">Class with this Name already exists! Use a different Name.</string>
    <string name="attend_success">Attendance recorded Successfully!</string>
    <string name="another_class">Select Another Class!</string>
    <string name="add_single">Student Added Successfully!</string>
    <string name="no_class">You haven\'t made any Classes yet!</string>
    <string name="not_logged">Not Logged In!</string>
    <string name="feedback">Feedback</string>
    <string name="inst_title">Instructions</string>
    <string name="inst_content">1. Classes can be both created or deleted.\n2. Students can only be addded during creation of a class and not after it,while they can be deleted anytime.\n3. Avoid using exact same names for two students in same class otherwise it can result in misambiguity.</string>
    <string name="dialog_cancel">Got It</string>
    <string name="hope_app">Hope You like this App</string>
    <string name="invalid_string">Class name/Student name can only include Alphabets, Numbers and Underscore characters.</string>
    <string name="click_inst">Click here to See Instructions</string>
    <string name="absence_title">Absence Dates</string>
    <string name="dialog_ok">Ok</string>
    <string name="pass_empty">Password field cannot be empty.</string>
    <string name="pass_change_success">Password Changed!</string>
    <string name="pass_verified">Verified!</string>
    <string name="auth_failed">Authentication Failed! Try Again.</string>
    <string name="acc_created">Account Created!</string>
    <string name="already_logged">Already Logged In!</string>
    <string name="share_body">I recommend Attender v1.0 . Visit the links with your android device. Attender v1.0( https://github.com/tanujkucp/Attender/blob/6dbc9cf94efe2a097b1b7342273b58ea3481f152/app/release/app-release.apk )</string>
    <string name="share_sub">Attender v1.0</string>
    <string name="share_via">Share via</string>
    <string name="tanuj_email">tanujkucp@outlook.com</string>
    <string name="feedback_sub">Feedback for App: Attender v1.0</string>
    <string name="feedback_starting_text">I have used Attender App and now I feel to share my views with the Developer.</string>
    <string name="share_via_email">Send Mail via</string>
    <string name="added">Added!</string>
</resources>
