<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/about_appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/attender"
        android:textSize="30sp"
        android:textColor="#0000FF"/>

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_appname"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/version"
        android:textColor="#070738"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/about_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/about_version"
        android:layout_marginTop="20dp"
        android:text="@string/aboutdev"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp"
        android:textColor="#000000"/>
</RelativeLayout>