<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/spinnerlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/standard"
        android:textColor="#000000"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/rollno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="2dp"
        android:layout_marginTop="60dp"
        android:layout_toLeftOf="@id/name"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/present"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/present"
        android:textSize="25dp" />

    <Button
        android:id="@+id/absent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/present"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/absent"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/progress_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/absent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#fdff1bf4"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/absent"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp" />

</RelativeLayout>